--- a/styles/style1.css
+++ b/styles/style1.css
@@ -1,24 +1,24 @@
 /*Fonts´s definitions*/
 @font-face {
     font-family: 'abelregular';
-    src: url('abel-regular-webfont.eot');
-    src: url('abel-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('abel-regular-webfont.woff2') format('woff2'),
-         url('abel-regular-webfont.woff') format('woff'),
-         url('abel-regular-webfont.ttf') format('truetype'),
-         url('abel-regular-webfont.svg#abelregular') format('svg');
+    src: url('./fonts/abel-regular-webfont.eot');
+    src: url('./fonts/abel-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/abel-regular-webfont.woff2') format('woff2'),
+         url('./fonts/abel-regular-webfont.woff') format('woff'),
+         url('./fonts/abel-regular-webfont.ttf') format('truetype'),
+         url('./fonts/abel-regular-webfont.svg#abelregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'acmeregular';
-    src: url('Acme-Regular-webfont.eot');
-    src: url('Acme-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Acme-Regular-webfont.woff2') format('woff2'),
-         url('Acme-Regular-webfont.woff') format('woff'),
-         url('Acme-Regular-webfont.ttf') format('truetype'),
-         url('Acme-Regular-webfont.svg#acmeregular') format('svg');
+    src: url('./fonts/Acme-Regular-webfont.eot');
+    src: url('./fonts/Acme-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/Acme-Regular-webfont.woff2') format('woff2'),
+         url('./fonts/Acme-Regular-webfont.woff') format('woff'),
+         url('./fonts/Acme-Regular-webfont.ttf') format('truetype'),
+         url('./fonts/Acme-Regular-webfont.svg#acmeregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
